--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
+    "@types/nodemailer": "^6.4.17",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "email-validator": "^2.0.4",
     "express": "^4.21.2",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
     "npm": "^11.2.0"
   }
 }
